--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.2.1",
     "autoprefixer": "^10.2.6",
     "next": "11.0.0",
     "postcss": "^8.3.5",
