--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -8,6 +8,12 @@ on:
 jobs:
   ci:
     runs-on: ubuntu-latest
+    environment:
+      name: Production
+    env:
+      LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
+      API_KEY: ${{ secrets.API_KEY }}
+      REQUEST_URL: ${{ secrets.REQUEST_URL }}
     strategy:
       matrix:
         node-version: [14.x]
@@ -26,6 +32,3 @@ jobs:
         run: |
           npm install -g @lhci/cli@0.8.x
           lhci autorun --config=./lighthouse/lighthouserc.json
-        env:
-          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
-
