--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/line-clamp": "^0.2.1",
     "autoprefixer": "^10.2.6",
     "next": "11.0.0",
+    "node-fetch": "^2.6.1",
     "postcss": "^8.3.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
