--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "11.0.0",
     "node-fetch": "^2.6.1",
     "postcss": "^8.3.5",
+    "prismjs": "^1.24.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tailwindcss": "^2.2.4"
