--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.2.1",
     "autoprefixer": "^10.2.6",
-    "next": "11.0.0",
+    "next": "^11.1.0",
     "node-fetch": "^2.6.1",
     "postcss": "^8.3.5",
     "prismjs": "^1.24.1",
