--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.2.1",
+    "@types/prismjs": "^1.16.6",
     "autoprefixer": "^10.2.6",
     "next": "^11.1.0",
     "node-fetch": "^2.6.1",
