--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/line-clamp": "^0.2.1",
     "@types/prismjs": "^1.16.6",
     "autoprefixer": "^10.2.6",
+    "cheerio": "^1.0.0-rc.10",
     "next": "^11.1.0",
     "node-fetch": "^2.6.1",
     "postcss": "^8.3.5",
