--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.2.1",
-    "@types/prismjs": "^1.16.6",
     "autoprefixer": "^10.2.6",
     "cheerio": "^1.0.0-rc.10",
     "next": "^11.1.0",
     "node-fetch": "^2.6.1",
     "postcss": "^8.3.5",
-    "prismjs": "^1.24.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "shiki": "^0.9.7",
     "tailwindcss": "^2.2.4"
   },
   "devDependencies": {
